# medstats

./: .env  Cargo.toml  LICENSE  README.md  start_backend.sh
axum-old/: Cargo.toml
axum-old/src/: main.rs  server.rs
axum-old/src/endpoints/examples/: request_params.rs  shared_data.rs
backend/: Cargo.toml  diesel.toml
backend/db/migrations/2024-07-31-203242_create_user/: up.sql
backend/src/: errors.rs  lib.rs  main.rs  models.rs
backend/src/db/: schema.rs
backend/src/db/models/: user.rs
backend/src/endpoints/: mod.rs
backend/src/endpoints/examples/: db_query.rs  hellow_world.rs  mod.rs
src/: lib.rs  main.rs  server.rs
src/endpoints/: hellowold.rs  mod.rs  test.rs
src/endpoints/examples/: custom_middware.rs  headers.rs  mod.rs  path_extraction.rs  request_params.rs  validate_json.rs
