[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[features]
production = []

[profile.release]
features = ["production"]

[dependencies]
actix-web = "4.8.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.117"
diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
anyhow = "1.0.86"
derive_more = "0.99.18"
listenfd = "0.3.5"
dotenv = "0.11"
log = "0.4"
env_logger = "0.6"
